syntax = "proto3";

package domain;

import "domain/common.proto";

option java_package = "br.com.fabricads.poc.proto";

message MockRequest {
    MockState state = 1;
}

message MockState {
  Status status = 1;
  string username = 2;
}

message MockGeneratorRequest {
  int32 qdte = 1;
}
